Fix alignment of user profile info in Safari
Changelog: fixed

--- a/app/assets/stylesheets/framework/mixins.scss
+++ b/app/assets/stylesheets/framework/mixins.scss
@@ -430,8 +430,7 @@
 
   &:last-child {
     &::after {
-      content: '';
-      padding: 0;
+      display: none;
     }
   }
 }
